# STS-Situation-Monitor

./: .env.example  .gitignore  Dockerfile  INSTALL.md  README.md  alembic.ini  auto_ingest.py  coverage.json  docker-compose.public.yml  docker-compose.yml  docker-entrypoint.sh  install.bat  install.sh  pyproject.toml  qa_full_suite.py  start.cmd  start_local.cmd  start_server.py
alembic/: env.py
docs/: ENHANCEMENT_PLAN.md  architecture.md  blockers-and-privacy.md  capability-failure-modes.md  functional-vision-and-gaps.md  internet-deployment.md  local-llm-analyst-policy.md  local-llm-output-schema.json  offline-buildout-checklist.md  osint-data-sources-reference.md
ops/: Caddyfile
scripts/: bootstrap.sh  check_authz_surface.py  check_deployment_surface.py  check_migration_graph.py  check_readme_endpoint_sync.py  db_backup.py  db_restore.py  demo_simulated_functioning.py  evaluate_truth_harness.py  generate_api_key.py  job_worker.py  qa_ci.sh  qa_infra.sh  qa_local.sh  qa_security.sh  repo_backup.py  run_public_api.sh  scheduler_tick.py  simulate_full_workflow.py  verify_config_surface.py  verify_migrations.sh
tests/: test_all_endpoints.py  test_anomaly_detector.py  test_api.py  test_api_fixes.py  test_autopilot.py  test_backup.py  test_bugfixes_and_edge_cases.py  test_clustering.py  test_collection_plan.py  test_connector_edge_cases.py  test_connectors.py  test_convergence.py  test_corroboration.py  test_coverage_analysis.py  test_coverage_autopilot.py  test_coverage_connectors.py  test_coverage_core.py  test_coverage_gaps1.py  test_coverage_gaps2.py  (+41 more)
(+137 files in other folders)
