[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sts-situation-monitor"
version = "0.1.0"
description = "Local-first OSINT situation monitor starter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "feedparser>=6.0.11",
  "sqlalchemy>=2.0.36",
  "httpx>=0.27.0",
  "alembic>=1.13.0",
]

[project.optional-dependencies]
postgres = [
  "psycopg2-binary>=2.9.9",
]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "pytest-cov>=5.0.0",
  "pip-audit>=2.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers --cov=sts_monitor --cov-report=term-missing --cov-fail-under=75"
markers = [
  "unit: fast deterministic unit tests",
  "integration: API/database integration tests",
  "simulation: full workflow and scenario simulations",
  "network: tests that touch external network resources",
  "slow: long-running tests",
]

[tool.coverage.run]
source = ["src/sts_monitor"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
